--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -479,7 +479,7 @@ def enable_events_ze(channel_name, tracing_mode: 'default', profiling: true)
   lttng_enable = "lttng enable-event --userspace --session=#{lttng_session_uuid} --channel=#{channel_name}"
   case tracing_mode
   when 'minimal'
-    exec("#{lttng_enable} $(cat #{datadir}/babeltrace_zeprofiling_apis.txt)")
+    exec("#{lttng_enable} $(cat #{DATADIR}/babeltrace_zeprofiling_apis.txt)")
     exec("#{lttng_enable} lttng_ust_ze_properties:device_timer")
   when 'full'
     exec("#{lttng_enable} lttng_ust_ze_build:log*")
