--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -260,6 +260,12 @@ THAPI_METADATA_FILE = 'thapi_metadata.yaml'
 
 def thapi_metadata(trace)
   @thapi_metadata ||= {}
+  full_path =  File.join(trace, THAPI_METADATA_FILE)
+  unless File.file?(full_path)
+    STDERR.puts("Error: #{trace} isn't a valid trace (missing #{THAPI_METADATA_FILE})")
+    exit(1)
+  end
+
   @thapi_metadata[trace] ||= YAML.load_file(File.join(trace, THAPI_METADATA_FILE))
 end
 
